build_output3.txt
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0106]: missing lifetime specifier
   --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:269:10
    |
269 |     Nvml(NvmlTelemetryProvider),
    |          ^^^^^^^^^^^^^^^^^^^^^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
268 ~ pub enum TelemetryProvider<'a> {
269 ~     Nvml(NvmlTelemetryProvider<'a>),
    |

error[E0597]: `nvml` does not live long enough
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:47:22
   |
26 | impl<'a> NvmlTelemetryProvider<'a> {
   |      -- lifetime `'a` defined here
...
44 |         let nvml = Nvml::init()?;
   |             ---- binding `nvml` declared here
...
47 |         let device = nvml.device_by_index(0)?;
   |                      ^^^^ borrowed value does not live long enough
48 |         self.device = Some(device);
   |         -------------------------- assignment requires that `nvml` is borrowed for `'a`
...
51 |     }
   |     - `nvml` dropped here while still borrowed

Some errors have detailed explanations: E0106, E0597.
For more information about an error, try `rustc --explain E0106`.
error: could not compile `neuro-spike-core` (lib) due to 2 previous errors
